--- a/templates/modules.html
+++ b/templates/modules.html
@@ -76,9 +76,9 @@
           </td>
           <td>
             
-            <a href="{{ url_for('toggle_module', module_id=m.id) }}" class="btn btn-sm btn-outline-warning">{% if m.is_active %}Deactive{% else %}Activate{% endif %}</a>
+            <a href="{{ url_for('module.toggle_module', module_id=m.id) }}" class="btn btn-sm {% if m.is_active %}btn-outline-danger{% else %}btn-outline-success{% endif %}">{% if m.is_active %}Deactive{% else %}Activate{% endif %}</a>
             <button class="btn btn-sm btn-outline-info" data-bs-toggle="modal" data-bs-target="#editModuleModal{{ m.id }}"><i class="bi bi-pencil-fill"></i></button>
-            <form action="{{ url_for('delete_module', module_id=m.id) }}" method="POST" class="d-inline">
+            <form action="{{ url_for('module.delete_module', module_id=m.id) }}" method="POST" class="d-inline">
               <button type="submit" class="btn btn-sm btn-outline-danger" onclick="return confirm('Delete this module?')"><i class="bi bi-trash3-fill"></i></button>
             </form>
           </td>          
@@ -96,7 +96,7 @@
   <!-- Modal: Add Module -->
   <div class="modal fade" id="addModuleModal" tabindex="-1" aria-labelledby="addModuleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
-      <form class="modal-content" method="POST" action="{{ url_for('register_module') }}">
+      <form class="modal-content" method="POST" action="{{ url_for('module.register_module') }}">
         <div class="modal-header">
           <h5 class="modal-title" id="addModuleModalLabel">Register New Module</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -152,7 +152,7 @@
   {% for m in modules %}
   <div class="modal fade" id="editModuleModal{{ m.id }}" tabindex="-1" aria-labelledby="editModuleModalLabel{{ m.id }}" aria-hidden="true">
     <div class="modal-dialog">
-      <form class="modal-content" method="POST" action="{{ url_for('update_module', module_id=m.id) }}">
+      <form class="modal-content" method="POST" action="{{ url_for('module.update_module', module_id=m.id) }}">
         <div class="modal-header">
           <h5 class="modal-title" id="editModuleModalLabel{{ m.id }}">Edit Module</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
